[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Alisson Hayasi da Costa <hayasi.ahs@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = {extras = ["standard"], version = "^0.28.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
httpx = "^0.27.0"
testcontainers = {version = ">=3.7,<4.0", extras = ["postgres"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
